--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
-<!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE HTML>
+<html>
+    <head>
+        <title></title>
+        <link rel="stylesheet" href="./style.css" />
+    </head>
+    <body>
+        <div id="headboard">
+            <ul>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Home</a></li>
+            </ul>
+            <h2><a href="#">COMPANY</a></h2>
+        </div>
+        <div id="titlespace"><img src="./mockup-title.png" alt="THE MORE YOU KNOW" /></div>
+        <div id="contentspace1">
+            <div class="contentblockleft"></div>
+            <div class="contentblockcenter"></div>
+            <div class="contentblockright"></div>
+        </div>
+        <div id="contentspace2">
+            <div class="contentblockleft"></div>
+            <div class="contentblockright"></div>
+           
+        </div>
+        <div id="blurbandpic">
+            <div class="contentblockleft"><p>At as in understood an remarkably solicitude. Mean them very seen she she. Use totally written the observe pressed justice. Instantly cordially far intention recommend estimable yet her his. Ladies stairs enough esteem add fat all enable. Needed its design number winter see. Oh be me sure wise sons no. Piqued ye of am spirit regret. Stimulated discretion impossible admiration in particular conviction up. </p></div>
+            <div class="contentblockright"><img src="./elephant.png" alt="an elephant" /></div>
+        </div>
+        <div id="footboard">hi</div>
+
+    </body>
+</html>
